--- a/messagingApp/posts/templates/posts/post_list.html
+++ b/messagingApp/posts/templates/posts/post_list.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
 
-<p> goob </p>
+<header>
+    <h1>Recent Posts</h1>
+</header>
+
+{% for post in posts %}
+    <article>
+        <time>published: {{ post.published_date }}</time>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </article>
+{% endfor %}
+
 
 {% endblock %}
